--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,10 @@ edition = "2021"
 halo2-base = "0.4.1"
 halo2-ecc = "0.4.1"
 halo2curves = "0.6.0"
-rand_core = "0.6.4"
-serde_json = "1.0.111"
+num-bigint = { version = "0.4", features = ["rand"] }
+rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
+rand = "0.8"
+rand_chacha = "0.3.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
